--- a/Simple Banking System/I'm so lite/task-info.yaml
+++ b/Simple Banking System/I'm so lite/task-info.yaml
@@ -662,6 +662,9 @@ files:
         }
     }
   learner_created: true
+- name: card.s3db
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/93/stages/517/implement
-status: Unchecked
+status: Solved
 record: -1
