--- a/Simple Banking System/Advanced system/task-info.yaml
+++ b/Simple Banking System/Advanced system/task-info.yaml
@@ -926,5 +926,5 @@ files:
     }
   learner_created: true
 feedback_link: https://hyperskill.org/projects/93/stages/518/implement
-status: Unchecked
+status: Solved
 record: -1
